Risk - Yura Mamyrin (yura@yura.net)

CURRENT VERSION:

	Risk Game:	1.1.1.5
	 * Save:	8
	 * Network:	11

	Android		44
	Flash GUI:	2
	Swing GUI:	2
	Simple GUI:	1.1.1.1
	Increment1GUI:	1.1.1.1
	CommandLine:	1.0.4.1

1.1.1.5

	annihilate button added to FlashGUI attack screen
	Czech and Slovak languages added by Viliam Tomcanyi
	del islands tool added to the MapEditor
	can load a savegame file by double clicking on it or "Domination.jar c:\test.save"
	done: get rid of "[X]" brakets from main menu
	strange nativenoresult popups in windows 7 fixed

	Android 44 zero data fix
		   trade fix by hawkprime
	Android 43 10,20,30sec online game timeouts added
		   fixed: game sometimes auto-saving in a broken state while ai is playing
		   fixed: move dialogs stay open after timeout
	Android 42 images overlapping fix for samsung galaxy s4
	Android 41 rules added
		   no square brackets in main menu
	Android 40 newHost command added for changing lobby servers
		   VenezuEla spelling on luca map fix
		   AI: minor improvements and refinement of capital planning
		   DefaultCards_cs PLAYER2 not found fix
	Android 39 better notifications
		   prefActivity theme on Honeycomb fix
	Android 38 option for color blind people added

1.1.1.4

	main map (luca.map) is now higher resolution (800x500)
	world map (world.map) is now higher resolution (800x500)
	MapEditor can load TEG/JTEG xml maps
	Card Ownership view shows you the cards you own when you dont own the country in Yellow
	online game setup ui fixes
	FlashGUI will remember the number of dice you are attacking/defending with in a given battle
	fixed: FlashGUI move and attack dialog countries that are too big need to be shown smaller

	Android 37 nullpointer in 2 exit events fixed (hack)
		   nullpointer in quit game and open stats activity at the same time fixed (hack)
		   show errors in saving file as well as in downloading it to the user (IOException: No space left on device)